# pypersia

./: LICENSE.txt  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
pypersia/: calander.py  convert.py  keyboard.py  numbers.py  text.py
pypersia.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_convert.py
