[project]
name = "pypersia"
version = "1.5.0"
authors = [
  { name="Aria Farahmand", email="aria.farahmand1391@gmail.com" },
]
description = "A Python library for Persian utilities"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/the-golden-one/pypersia"
Issues = "https://github.com/the-golden-one/pypersia/issues"

[tool.setuptools.packages.find]
where = ["pypersia"]
